Updated css; fixed button communicate now to be only visible for registered users

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -207,6 +207,9 @@ p.capitalize:first-letter {
   border-color: #74c9be;
   font-family: 'Ruda', sans-serif;
   font-size: 15px;
+  border-radius: 9px;
+    border: 2px solid;
+    padding: 5px 23px;
   letter-spacing: 2px;
   margin-bottom: 25px;
 }
